# polkadot-sdk-solochain-template

./: Cargo.toml
.github/workflows/: ci.yml  pr-reminder.yml  release.yml
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
