[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.3" }
frame-benchmarking-cli = { path = "substrate/utils/frame/benchmarking-cli", default-features = false, version = "40.0.0" }
frame-system = { path = "substrate/frame/system", default-features = false, version = "36.0.0" }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.23.2" }
pallet-transaction-payment = { path = "substrate/frame/transaction-payment", default-features = false, version = "36.0.0" }
pallet-transaction-payment-rpc = { path = "substrate/frame/transaction-payment/rpc", default-features = false, version = "38.0.0" }
sc-basic-authorship = { path = "substrate/client/basic-authorship", default-features = false, version = "0.42.0" }
sc-cli = { path = "substrate/client/cli", default-features = false, version = "0.44.0" }
sc-client-api = { path = "substrate/client/api", default-features = false, version = "35.1.0" }
sc-consensus = { path = "substrate/client/consensus/common", default-features = false, version = "0.41.0" }
sc-consensus-aura = { path = "substrate/client/consensus/aura", default-features = false, version = "0.42.0" }
sc-consensus-grandpa = { path = "substrate/client/consensus/grandpa", default-features = false, version = "0.27.0" }
sc-executor = { path = "substrate/client/executor", default-features = false, version = "0.39.0" }
sc-network = { path = "substrate/client/network", default-features = false, version = "0.42.0" }
sc-offchain = { path = "substrate/client/offchain", default-features = false, version = "37.0.0" }
sc-rpc-api = { path = "substrate/client/rpc-api", default-features = false, version = "0.41.0" }
sc-service = { path = "substrate/client/service", default-features = false, version = "0.43.0" }
sc-telemetry = { path = "substrate/client/telemetry", default-features = false, version = "22.0.0" }
sc-transaction-pool = { path = "substrate/client/transaction-pool", default-features = false, version = "35.0.0" }
sc-transaction-pool-api = { path = "substrate/client/transaction-pool/api", default-features = false, version = "35.0.0" }
serde_json = { version = "1.0.114", default-features = false }
solochain-template-runtime = { path = "templates/solochain/runtime", version = "0.1.0" }
sp-api = { path = "substrate/primitives/api", default-features = false, version = "33.0.0" }
sp-block-builder = { path = "substrate/primitives/block-builder", default-features = false, version = "33.0.0" }
sp-blockchain = { path = "substrate/primitives/blockchain", default-features = false, version = "35.1.0" }
sp-consensus-aura = { path = "substrate/primitives/consensus/aura", default-features = false, version = "0.39.0" }
sp-consensus-grandpa = { path = "substrate/primitives/consensus/grandpa", default-features = false, version = "20.0.0" }
sp-core = { path = "substrate/primitives/core", default-features = false, version = "34.0.0" }
sp-inherents = { path = "substrate/primitives/inherents", default-features = false, version = "33.0.0" }
sp-io = { path = "substrate/primitives/io", default-features = false, version = "37.0.0" }
sp-keyring = { path = "substrate/primitives/keyring", default-features = false, version = "38.0.0" }
sp-runtime = { path = "substrate/primitives/runtime", default-features = false, version = "38.0.0" }
sp-timestamp = { path = "substrate/primitives/timestamp", default-features = false, version = "33.0.0" }
substrate-frame-rpc-system = { path = "substrate/utils/frame/rpc/system", default-features = false, version = "36.0.0" }
substrate-build-script-utils = { path = "substrate/utils/build-script-utils", default-features = false, version = "11.0.0" }
