[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk. (polkadot v1.14.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
	"serde",
], workspace = true }
frame-support = { version = "36.0.0", features = ["experimental"], workspace = true }
frame-system = { version = "36.0.0", workspace = true }
frame-try-runtime = { version = "0.42.0", optional = true, workspace = true }
frame-executive = { version = "36.0.0", workspace = true }
pallet-aura = { version = "35.0.0", workspace = true }
pallet-balances = { version = "37.0.0", workspace = true }
pallet-grandpa = { version = "36.0.0", workspace = true }
pallet-sudo = { version = "36.0.0", workspace = true }
pallet-timestamp = { version = "35.0.0", workspace = true }
pallet-transaction-payment = { version = "36.0.0", workspace = true }
sp-api = { version = "33.0.0", workspace = true }
sp-block-builder = { version = "33.0.0", workspace = true }
sp-consensus-aura = { version = "0.39.0", features = ["serde"], workspace = true }
sp-consensus-grandpa = { version = "20.0.0", features = ["serde"], workspace = true }
sp-core = { version = "34.0.0", features = ["serde"], workspace = true }
sp-inherents = { version = "33.0.0", workspace = true }
sp-offchain = { version = "33.0.0", workspace = true }
sp-runtime = { version = "38.0.0", features = ["serde"], workspace = true }
sp-session = { version = "34.0.0", workspace = true }
sp-std = { version = "14.0.0", workspace = true }
sp-storage = { version = "21.0.0", workspace = true }
sp-transaction-pool = { version = "33.0.0", workspace = true }
sp-version = { version = "36.0.0", features = ["serde"], workspace = true }
sp-genesis-builder = { version = "0.14.0", workspace = true }
frame-system-rpc-runtime-api = { version = "33.0.0", workspace = true }
pallet-transaction-payment-rpc-runtime-api = { version = "36.0.0", workspace = true }
frame-benchmarking = { version = "36.0.0", optional = true, workspace = true }
frame-system-benchmarking = { version = "36.0.0", optional = true, workspace = true }
pallet-template = { version = "0.1.0", workspace = true }

[build-dependencies]
substrate-wasm-builder = { version = "23.0.0", optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",

	"frame-benchmarking?/std",
	"frame-try-runtime?/std",

	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-template/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
]
