[package]
name = "pallet-template"
description = "FRAME pallet template for defining custom runtime logic. (polkadot v1.14.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { version = "36.0.0", optional = true, workspace = true }
frame-support = { version = "36.0.0", workspace = true }
frame-system = { version = "36.0.0", workspace = true }

[dev-dependencies]
sp-core = { version = "34.0.0", default-features = true }
sp-io = { version = "37.0.0", default-features = true }
sp-runtime = { version = "38.0.0", default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
